Made code compatible with jdk17